--- a/style.css
+++ b/style.css
@@ -2,14 +2,17 @@ body{
     text-align: center;
 }
 
+.back {
+  font: bold 1em Arial;
+  padding:.2em;
+  margin: .2em;
+}
+
 .button {
-  font: bold 11px Arial;
+  font: bold 2em Arial;
   text-decoration: none;
   background-color: #EEEEEE;
   color: #333333;
-  padding: 2px 6px 2px 6px;
-  border-top: 1px solid #CCCCCC;
-  border-right: 1px solid #333333;
-  border-bottom: 1px solid #333333;
-  border-left: 1px solid #CCCCCC;
+  padding: 1em;
+  margin: 1em;
 }
